# streamlit-lightweight-charts-v5

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOP_AND_DEPLOY.md  DEVELOP_AND_DEPLOY.txt  Future.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  git_push_version.sh  git_switch.sh  justfile  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
demo/: README.md  chart_demo.py  chart_themes.py  ichimoku_demo.py  indicators.py  minimal_demo.py  multi_demo.py  test_component.py  volume_profile_demo.py  yield_curve.py
e2e/: e2e_utils.py  smoke_app.py  test_component_renders.py
lightweight_charts_v5/: __init__.py  chart_demo.py  chart_themes.py  indicators.py
lightweight_charts_v5/frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lightweight_charts_v5/frontend/src/: LightweightChartsComponent.tsx  index.tsx
lightweight_charts_v5/frontend/src/plugins/: IchimokuCloudPlugin.ts  StaticRectanglePlugin.ts
