[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlit-lightweight-charts-v5"
version = "0.2.0"
description = "Streamlit component for viewing v5 Lightweight Charts"
readme = "README.md"
authors = [
    {name = "Urban Ottosson", email = "urban@ottosson.org"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit >= 1.0",
]

[project.urls]
Homepage = "https://github.com/locupleto/streamlit-lightweight-charts-v5"
Changelog = "https://github.com/locupleto/streamlit-lightweight-charts-v5/blob/main/CHANGELOG.md"

[project.optional-dependencies]
devel = [
    "pytest >= 8",
    "playwright >= 1.49",
    "pytest-playwright >= 0.7",
    "requests >= 2.32",
    "pytest-rerunfailures >= 14",
    "Pillow >= 10",
]
demo = [
    "yfinance",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["lightweight_charts_v5"]
# Ship only the compiled frontend, not its sources or node_modules
exclude = ["lightweight_charts_v5/frontend"]

[tool.hatch.build.targets.wheel.force-include]
"lightweight_charts_v5/frontend/build" = "lightweight_charts_v5/frontend/build"

[tool.hatch.build.targets.sdist]
include = [
    "lightweight_charts_v5",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
exclude = [
    "lightweight_charts_v5/frontend/node_modules",
]
# frontend/build is gitignored; hatchling drops VCS-ignored files unless
# they are declared as build artifacts
artifacts = [
    "lightweight_charts_v5/frontend/build",
]
